# FastAPI-LMS

./: main.py  pyproject.toml  sql_app.db
alembic/: env.py
alembic/versions/: 9a8d52048d6b_.py
db/: db_setup.py
db/models/: mixins.py  user.py
pydantic_schemas/: user.py
utils/: users.py
