[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["arnab <arnabchatterjee.ac.2@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_lms"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.8"
sqlalchemy-utils = "^0.40.0"
alembic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
